issue-77 Horizontal scroll removal from footer (#86)

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,7 @@ footer {
   padding: 1rem 1rem 2rem;
   background-color: var(--primary);
   font-size: var(--body-font-size-s);
+  overflow: hidden;
 }
 
 footer .primary ul {
